# kergit-server

./: .bazelrc  .clang-format  .env.example  .gitignore  .gitmodules  BUILD  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  MODULE.bazel  PUBLIC_ID_PLAN.md  README.md  VERSION  build.sh  client.cpp  communication_diagram.md  connection_flow_comparison.md  depgraph.A07zOt.dot  server.cpp  server.py  serverless_communication_foundation_plan_v_0.md  system_requirements.txt
.github/workflows/: build-check.yml  docker-check.yml  format-check.yml  test-check.yml
app/: AppStack.cpp  AppStack.h  BUILD  CommandRegistery.cpp  CommandRegistery.h  Dispatcher.cpp  Dispatcher.h  ICommand.h  Queue.h  ThreadSafeCmdQueue.h  server.cpp
app/commands/: AuthCommand.cpp  AuthCommand.h  BUILD  ChannelUsersCommand.cpp  ChannelUsersCommand.h  CommandJson.h  CreateChannelCommand.cpp  CreateChannelCommand.h  CreateHubCommand.cpp  CreateHubCommand.h  DeleteChannelCommand.cpp  DeleteChannelCommand.h  DeleteHubCommand.cpp  DeleteHubCommand.h  GetHubInviteCommand.cpp  GetHubInviteCommand.h  ICommand.h  JoinChannelCommand.cpp  JoinChannelCommand.h  JoinHubByInviteCommand.cpp  JoinHubByInviteCommand.h  LeaveHubCommand.cpp  LeaveHubCommand.h  ListCommand.cpp  ListCommand.h  PingCommand.h  RenameChannelCommand.cpp  RenameChannelCommand.h  RenameHubCommand.cpp  RenameHubCommand.h  SendMessageCommand.cpp  SendMessageCommand.h  UpdateMemberRoleCommand.cpp  UpdateMemberRoleCommand.h  UpdateProfileCommand.cpp  UpdateProfileCommand.h  command_list.bzl  utils.cpp  utils.h
app/converters/: BUILD  ProtoConverters.h
app/dispatcher/: BUILD  CommandContext.h  Dispatcher.cpp  Dispatcher.h
app/memory/: BUILD  ICache.h  OnMemoryCache.cpp  OnMemoryCache.h
app/proto_builders/: BUILD  EnvelopeBuilders.h  PresenceBuilders.h  VoiceBuilders.h
app/pubsub/: BUILD  PubSub.cpp  PubSub.h
app/queue/: BUILD  EventQueue.h  IEventSink.h  Msg.h  OutgoingQueue.h  ThreadSafeCmdQueue.h
app/services/: AuthService.cpp  AuthService.h  BUILD  HubPublisher.cpp  HubPublisher.h  PublicIdService.cpp  PublicIdService.h  UserServices.h
app/test/: BUILD  thread_safe_queue.cc
app/worker/: AuthGuard.cpp  AuthGuard.h  BUILD  WorkerPool.cpp  WorkerPool.h
architecture/: ARCHITECTURE_EXTENSION.md  AUTHENTICATION_TESTING.md  README.md  RUNNING_VOICE_CALLS.md  SECURITY_FOUNDATION.md  SECURITY_IMPLEMENTATION_SUMMARY.md  TESTING_AUTHENTICATION.md  TEST_VOICE_CALLS.md  USER_EXPERIENCE_PLAN.md  USER_EXPERIENCE_SUMMARY.md  VOICE_CALL_IMPLEMENTATION.md  app_architecture.md  app_microservices_blueprint.md  design_v0.drawio  net_architecture.md  startup_flow.md  system_overview.md  web_client_architecture.md
certs/: BUILD  cert.pem  key.pem
certs/database/: BUILD
chat-app/client/: CMakeLists.txt  main.cpp
chat-app/server/: server.py
client/: BUILD  ChatClient.cpp  ChatClient.h  ChatClientApp.cpp  ChatClientApp.h  WebRTCManager.cpp  WebRTCManager.h  client.cpp
clients/: BUILD  test_auth_client.py
clients/cli/: BUILD  ChatClientApp.cpp  ChatClientApp.h  README.md  client.cpp
clients/web/: BUILD  README.md  app.js  gen_config.py  https_server.py  index.html  server.py  styles.css  test_connection.html
common/: BUILD  Call.h  Channel.h  ChatServer.cpp  ChatServer.h  Hub.h  Message.cpp  Message.h  User.cpp  User.h
config/: BUILD  ws_origin_policy.yaml
control/http/: BUILD  HttpServer.cpp  HttpServer.h
core/: AppFactory.h  BUILD  ChatServerApp.cpp  ChatServerApp.h  IApp.h  IWebSocket.h  LivekitClusterConfig.cpp  LivekitClusterConfig.h  LivekitClusterConfig_test.cc  PlainApp.h  PublicEndpointConfig.cpp  PublicEndpointConfig.h  PublicEndpointConfig_test.cc  ServerConfig.h  TlsApp.h  Types.h
core/base/: BUILD  ThreadSafeQueue.h
core/cache/: AnyKey.h  BUILD  ICache.h  OnMemoryCache.cpp  OnMemoryCache.h
core/database/: BUILD
core/security/: BUILD
database/: BUILD
database/test/: database_connection.cpp  wip.sql
docker/: Caddyfile  Dockerfile  build.sh  docker-compose.yml  docker-run-server.sh  restart-service.sh  run-server.sh  run.sh  stop-server.sh  stop.sh
docker/caddy/: README.md
docker/lib/: compose.sh  livekit-runtime.sh  runtime-env.sh
docs/: ARCHITECTURE.md  ENVIRONMENT.md  ROADMAP.md  SECURITY.md  SETUP.md  VOICE.md  join_voice_channel_flow.md  supabase_verifier_optimization.md  supabase_verifier_report.md
docs/legal/: LEGAL_DOCUMENT_STORAGE.md
domains/: BUILD  Channel.h  Hub.h  Message.h  User.h
domains/ids/: BUILD  Ids.h
infra/persistence/: BUILD  ConnectionPool.cpp  ConnectionPool.h  DatabaseExecutor.cpp  DatabaseExecutor.h  PersistenceGateway.cpp  PersistenceGateway.h  RepositoryMux.h  chatdb.cpp  chatdb.h
infra/redis/: BUILD  RedisClient.cpp  RedisClient.h
infra/security/: BUILD
livekit/: BUILD  lan_node1.yaml  lan_node2.yaml  livekit-lan-debug-voice-first.yaml  livekit-localhost-debug.yaml  livekit.yaml
livekit/cli/: BUILD  LivekitClient.h  (+1 more)
logs/: BUILD
net/: BUILD  ClientGateway.cpp  ClientGateway.h  ConnectionManager.cpp  ConnectionManager.h  Heartbeat.cpp  Heartbeat.h  NetworkRouter.cpp  NetworkRouter.h  NetworkStack.cpp  NetworkStack.h  OutgoingQueueConsumer.cpp  OutgoingQueueConsumer.h  PerSocketData.h  Types.h  WSAdapter.h  WebSocketServer.cpp  WebSocketServer.h
proto/: BUILD  ParsedPayload.h  chat.proto  envelope.proto  heartbeat.proto
scripts/: bazel_depgraph.sh  format.sh  list_files.sh  render_livekit_runtime.py  test_render_livekit_runtime.py
security/: Authentication.cpp  Authentication.h  BUILD  RateLimiter.h  SecurityValidator.h  SessionManager.h
server/: BUILD  ChatServer.cpp  ChatServer.h  ChatServerApp.cpp  ChatServerApp.h  Config.h  MessageFilters.cpp  MessageFilters.h  OriginAllowlist.h  Server.cpp  Server.h  TlsConfig.h  main.cpp  server.cpp
tests/: BUILD  ChatIntegrationTests.cpp  ChatTestFixture.h  auth_test_client.py  run_auth_test.sh  voice_call_test.cpp
utils/: BUILD  EnvLoader.cpp  EnvLoader.h  EventLogger.h  Loggable.h  Logger.h  Metrics.cpp  Metrics.h  PathResolver.h  TlsConfig.h  Uuid.cpp  Uuid.h
web-client/: debug.html  index.html  server.py
(+413 files in other folders)
