"""Bazel module configuration for serverless communication project."""
module(name = "serverless_communication")

bazel_dep(name = "rules_cc", version = "0.1.4")
bazel_dep(name = "rules_shell", version = "0.5.0")
bazel_dep(name = "websocketpp", version = "0.8.2", dev_dependency = True)
bazel_dep(name = "googletest", version = "1.17.0")

nlohmann_json_ext = use_extension("//third_party/nlohmann_json:extension.bzl", "nlohmann_json")
use_repo(nlohmann_json_ext, "nlohmann_json")

uwebsockets_ext = use_extension("//third_party/uwebsockets:extension.bzl", "uwebsockets")
use_repo(uwebsockets_ext, "uwebsockets")

usockets_ext = use_extension("//third_party/usockets:extension.bzl", "usockets")
use_repo(usockets_ext, "usockets")

# Hedron Compile Commands Extractor for intellisense support in VSCode.
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "4f28899228fb3ad0126897876f147ca15026151e",
    # Replace the commit hash (above) with the latest (https://github.com/hedronvision/bazel-compile-commands-extractor/commits/main).
    # Even better, set up Renovate and let it do the work for you (see "Suggestion: Updates" in the README).
)
